ADD: react-test-renderer package

--- a/package.json
+++ b/package.json
@@ -228,7 +228,7 @@
     "plop": "2.0.0",
     "pre-commit": "1.2.2",
     "prettier": "1.13.5",
-    "react-test-renderer": "16.4.1",
+    "react-test-renderer": "^16.4.1",
     "rimraf": "2.6.2",
     "shelljs": "0.8.2",
     "style-loader": "0.21.0",
